--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "lodash.debounce": "^4.0.8",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
